out/production/Compilador/y.output
   0  $accept : programa $end

   1  programa : '{' cuerpoPrograma '}'
   2           | '{' '}'
   3           | cuerpoPrograma '}'
   4           | '{' cuerpoPrograma

   5  cuerpoPrograma : cuerpoPrograma declaracionClase
   6                 | cuerpoPrograma listaSentencias
   7                 | declaracionClase
   8                 | listaSentencias

   9  declaracionClase : CLASS ID '{' cuerpoClase '}' ','
  10                   | CLASS ID '{' cuerpoClase '}'
  11                   | CLASS ID ','
  12                   | CLASS ID

  13  cuerpoClase : cuerpoClase seccionClase
  14              | seccionClase

  15  seccionClase : seccionAtributos
  16               | seccionMetodos

  17  seccionAtributos : tipo ID ';' listaAtributos
  18                   | tipo ID ','
  19                   | tipo ID

  20  listaAtributos : ID ';' listaAtributos
  21                 | ID ','
  22                 | ID

  23  seccionMetodos : seccionMetodos ',' declaracionMetodo
  24                 | declaracionMetodo ','

  25  listaEjecutables : listaEjecutables ',' sentenciaEjecutable
  26                   | sentenciaEjecutable ','
  27                   | sentenciaEjecutable '$'

  28  sentenciaEjecutable : asignacion
  29                      | sentenciaIf
  30                      | sentenciaWhile
  31                      | print
  32                      | return
  33                      | invocacionMetodo

  34  listaDeclarativa : listaDeclarativa ',' sentenciaDeclarativa
  35                   | sentenciaDeclarativa ','
  36                   | sentenciaDeclarativa '$'

  37  sentenciaDeclarativa : declaracionMetodo
  38                       | declaracion

  39  listaSentencias : listaDeclarativa ',' listaEjecutables
  40                  | listaDeclarativa
  41                  | listaEjecutables

  42  asignacion : ID ASIGN expresion

  43  sentenciaIf : IF '(' expresion comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}' END_IF
  44              | IF '(' expresion comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}'
  45              | IF '(' expresion comparador expresion ')' '{' listaEjecutables '}' END_IF
  46              | IF '(' expresion comparador expresion ')' '{' listaEjecutables '}'

  47  sentenciaWhile : WHILE '(' expresion comparador expresion ')' '{' listaEjecutables '}'
  48                 | WHILE '(' expresion comparador ')' '{' listaEjecutables '}'

  49  print : PRINT '%' CADENA '%'

  50  return : RETURN ';'
  51         | RETURN expresion ';'

  52  declaracionMetodo : VOID ID '(' tipo ID ')' '{' cuerpoMetodo '}'
  53                    | VOID ID '(' ')' '{' cuerpoMetodo '}'

  54  cuerpoMetodo : listaSentencias

  55  invocacionMetodo : ID '(' tipo ID ')'
  56                   | ID '(' ')'

  57  declaracion : tipo listaDeclaracion

  58  listaDeclaracion : ID ';' listaDeclaracion
  59                   | ID

  60  tipo : SHORT
  61       | ULONG
  62       | ID

  63  expresion : termino
  64            | expresion '+' termino
  65            | expresion '-' termino

  66  termino : factor
  67          | termino '*' factor
  68          | termino '/' factor

  69  factor : ID
  70         | ID MENOSMENOS
  71         | SHORT
  72         | ULONG
  73         | '(' expresion ')'

  74  comparador : MAYOR
  75             | MENOR
  76             | MAYORIGUAL
  77             | MENORIGUAL
  78             | IGUAL
  79             | DISTINTO

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	CLASS  shift 2
	IF  shift 3
	PRINT  shift 4
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	WHILE  shift 8
	RETURN  shift 9
	'{'  shift 10
	.  error

	programa  goto 11
	cuerpoPrograma  goto 12
	declaracionClase  goto 13
	listaSentencias  goto 14
	tipo  goto 15
	declaracionMetodo  goto 16
	listaEjecutables  goto 17
	sentenciaEjecutable  goto 18
	asignacion  goto 19
	sentenciaIf  goto 20
	sentenciaWhile  goto 21
	print  goto 22
	return  goto 23
	invocacionMetodo  goto 24
	listaDeclarativa  goto 25
	sentenciaDeclarativa  goto 26
	declaracion  goto 27


state 1
	asignacion : ID . ASIGN expresion  (42)
	invocacionMetodo : ID . '(' tipo ID ')'  (55)
	invocacionMetodo : ID . '(' ')'  (56)
	tipo : ID .  (62)

	ASIGN  shift 28
	'('  shift 29
	ID  reduce 62


state 2
	declaracionClase : CLASS . ID '{' cuerpoClase '}' ','  (9)
	declaracionClase : CLASS . ID '{' cuerpoClase '}'  (10)
	declaracionClase : CLASS . ID ','  (11)
	declaracionClase : CLASS . ID  (12)

	ID  shift 30
	.  error


state 3
	sentenciaIf : IF . '(' expresion comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}' END_IF  (43)
	sentenciaIf : IF . '(' expresion comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}'  (44)
	sentenciaIf : IF . '(' expresion comparador expresion ')' '{' listaEjecutables '}' END_IF  (45)
	sentenciaIf : IF . '(' expresion comparador expresion ')' '{' listaEjecutables '}'  (46)

	'('  shift 31
	.  error


state 4
	print : PRINT . '%' CADENA '%'  (49)

	'%'  shift 32
	.  error


state 5
	declaracionMetodo : VOID . ID '(' tipo ID ')' '{' cuerpoMetodo '}'  (52)
	declaracionMetodo : VOID . ID '(' ')' '{' cuerpoMetodo '}'  (53)

	ID  shift 33
	.  error


state 6
	tipo : SHORT .  (60)

	.  reduce 60


state 7
	tipo : ULONG .  (61)

	.  reduce 61


state 8
	sentenciaWhile : WHILE . '(' expresion comparador expresion ')' '{' listaEjecutables '}'  (47)
	sentenciaWhile : WHILE . '(' expresion comparador ')' '{' listaEjecutables '}'  (48)

	'('  shift 34
	.  error


state 9
	return : RETURN . ';'  (50)
	return : RETURN . expresion ';'  (51)

	ID  shift 35
	SHORT  shift 36
	ULONG  shift 37
	';'  shift 38
	'('  shift 39
	.  error

	expresion  goto 40
	termino  goto 41
	factor  goto 42


state 10
	programa : '{' . cuerpoPrograma '}'  (1)
	programa : '{' . '}'  (2)
	programa : '{' . cuerpoPrograma  (4)

	ID  shift 1
	CLASS  shift 2
	IF  shift 3
	PRINT  shift 4
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	WHILE  shift 8
	RETURN  shift 9
	'}'  shift 43
	.  error

	cuerpoPrograma  goto 44
	declaracionClase  goto 13
	listaSentencias  goto 14
	tipo  goto 15
	declaracionMetodo  goto 16
	listaEjecutables  goto 17
	sentenciaEjecutable  goto 18
	asignacion  goto 19
	sentenciaIf  goto 20
	sentenciaWhile  goto 21
	print  goto 22
	return  goto 23
	invocacionMetodo  goto 24
	listaDeclarativa  goto 25
	sentenciaDeclarativa  goto 26
	declaracion  goto 27


state 11
	$accept : programa . $end  (0)

	$end  accept


state 12
	programa : cuerpoPrograma . '}'  (3)
	cuerpoPrograma : cuerpoPrograma . declaracionClase  (5)
	cuerpoPrograma : cuerpoPrograma . listaSentencias  (6)

	ID  shift 1
	CLASS  shift 2
	IF  shift 3
	PRINT  shift 4
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	WHILE  shift 8
	RETURN  shift 9
	'}'  shift 45
	.  error

	declaracionClase  goto 46
	listaSentencias  goto 47
	tipo  goto 15
	declaracionMetodo  goto 16
	listaEjecutables  goto 17
	sentenciaEjecutable  goto 18
	asignacion  goto 19
	sentenciaIf  goto 20
	sentenciaWhile  goto 21
	print  goto 22
	return  goto 23
	invocacionMetodo  goto 24
	listaDeclarativa  goto 25
	sentenciaDeclarativa  goto 26
	declaracion  goto 27


state 13
	cuerpoPrograma : declaracionClase .  (7)

	.  reduce 7


state 14
	cuerpoPrograma : listaSentencias .  (8)

	.  reduce 8


state 15
	declaracion : tipo . listaDeclaracion  (57)

	ID  shift 48
	.  error

	listaDeclaracion  goto 49


state 16
	sentenciaDeclarativa : declaracionMetodo .  (37)

	.  reduce 37


state 17
	listaEjecutables : listaEjecutables . ',' sentenciaEjecutable  (25)
	listaSentencias : listaEjecutables .  (41)

	','  shift 50
	$end  reduce 41
	ID  reduce 41
	CLASS  reduce 41
	IF  reduce 41
	PRINT  reduce 41
	VOID  reduce 41
	SHORT  reduce 41
	ULONG  reduce 41
	WHILE  reduce 41
	RETURN  reduce 41
	'}'  reduce 41


state 18
	listaEjecutables : sentenciaEjecutable . ','  (26)
	listaEjecutables : sentenciaEjecutable . '$'  (27)

	','  shift 51
	'$'  shift 52
	.  error


state 19
	sentenciaEjecutable : asignacion .  (28)

	.  reduce 28


state 20
	sentenciaEjecutable : sentenciaIf .  (29)

	.  reduce 29


state 21
	sentenciaEjecutable : sentenciaWhile .  (30)

	.  reduce 30


state 22
	sentenciaEjecutable : print .  (31)

	.  reduce 31


state 23
	sentenciaEjecutable : return .  (32)

	.  reduce 32


state 24
	sentenciaEjecutable : invocacionMetodo .  (33)

	.  reduce 33


state 25
	listaDeclarativa : listaDeclarativa . ',' sentenciaDeclarativa  (34)
	listaSentencias : listaDeclarativa . ',' listaEjecutables  (39)
	listaSentencias : listaDeclarativa .  (40)

	','  shift 53
	$end  reduce 40
	ID  reduce 40
	CLASS  reduce 40
	IF  reduce 40
	PRINT  reduce 40
	VOID  reduce 40
	SHORT  reduce 40
	ULONG  reduce 40
	WHILE  reduce 40
	RETURN  reduce 40
	'}'  reduce 40


state 26
	listaDeclarativa : sentenciaDeclarativa . ','  (35)
	listaDeclarativa : sentenciaDeclarativa . '$'  (36)

	','  shift 54
	'$'  shift 55
	.  error


state 27
	sentenciaDeclarativa : declaracion .  (38)

	.  reduce 38


state 28
	asignacion : ID ASIGN . expresion  (42)

	ID  shift 35
	SHORT  shift 36
	ULONG  shift 37
	'('  shift 39
	.  error

	expresion  goto 56
	termino  goto 41
	factor  goto 42


state 29
	invocacionMetodo : ID '(' . tipo ID ')'  (55)
	invocacionMetodo : ID '(' . ')'  (56)

	ID  shift 57
	SHORT  shift 6
	ULONG  shift 7
	')'  shift 58
	.  error

	tipo  goto 59


state 30
	declaracionClase : CLASS ID . '{' cuerpoClase '}' ','  (9)
	declaracionClase : CLASS ID . '{' cuerpoClase '}'  (10)
	declaracionClase : CLASS ID . ','  (11)
	declaracionClase : CLASS ID .  (12)

	'{'  shift 60
	','  shift 61
	$end  reduce 12
	ID  reduce 12
	CLASS  reduce 12
	IF  reduce 12
	PRINT  reduce 12
	VOID  reduce 12
	SHORT  reduce 12
	ULONG  reduce 12
	WHILE  reduce 12
	RETURN  reduce 12
	'}'  reduce 12


state 31
	sentenciaIf : IF '(' . expresion comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}' END_IF  (43)
	sentenciaIf : IF '(' . expresion comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}'  (44)
	sentenciaIf : IF '(' . expresion comparador expresion ')' '{' listaEjecutables '}' END_IF  (45)
	sentenciaIf : IF '(' . expresion comparador expresion ')' '{' listaEjecutables '}'  (46)

	ID  shift 35
	SHORT  shift 36
	ULONG  shift 37
	'('  shift 39
	.  error

	expresion  goto 62
	termino  goto 41
	factor  goto 42


state 32
	print : PRINT '%' . CADENA '%'  (49)

	CADENA  shift 63
	.  error


state 33
	declaracionMetodo : VOID ID . '(' tipo ID ')' '{' cuerpoMetodo '}'  (52)
	declaracionMetodo : VOID ID . '(' ')' '{' cuerpoMetodo '}'  (53)

	'('  shift 64
	.  error


state 34
	sentenciaWhile : WHILE '(' . expresion comparador expresion ')' '{' listaEjecutables '}'  (47)
	sentenciaWhile : WHILE '(' . expresion comparador ')' '{' listaEjecutables '}'  (48)

	ID  shift 35
	SHORT  shift 36
	ULONG  shift 37
	'('  shift 39
	.  error

	expresion  goto 65
	termino  goto 41
	factor  goto 42


state 35
	factor : ID .  (69)
	factor : ID . MENOSMENOS  (70)

	MENOSMENOS  shift 66
	$end  reduce 69
	ID  reduce 69
	CLASS  reduce 69
	IF  reduce 69
	PRINT  reduce 69
	VOID  reduce 69
	SHORT  reduce 69
	ULONG  reduce 69
	WHILE  reduce 69
	RETURN  reduce 69
	MAYOR  reduce 69
	MENOR  reduce 69
	MAYORIGUAL  reduce 69
	MENORIGUAL  reduce 69
	IGUAL  reduce 69
	DISTINTO  reduce 69
	'+'  reduce 69
	'-'  reduce 69
	'*'  reduce 69
	'/'  reduce 69
	'}'  reduce 69
	','  reduce 69
	';'  reduce 69
	'$'  reduce 69
	')'  reduce 69


state 36
	factor : SHORT .  (71)

	.  reduce 71


state 37
	factor : ULONG .  (72)

	.  reduce 72


state 38
	return : RETURN ';' .  (50)

	.  reduce 50


state 39
	factor : '(' . expresion ')'  (73)

	ID  shift 35
	SHORT  shift 36
	ULONG  shift 37
	'('  shift 39
	.  error

	expresion  goto 67
	termino  goto 41
	factor  goto 42


state 40
	return : RETURN expresion . ';'  (51)
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)

	'+'  shift 68
	'-'  shift 69
	';'  shift 70
	.  error


state 41
	expresion : termino .  (63)
	termino : termino . '*' factor  (67)
	termino : termino . '/' factor  (68)

	'*'  shift 71
	'/'  shift 72
	$end  reduce 63
	ID  reduce 63
	CLASS  reduce 63
	IF  reduce 63
	PRINT  reduce 63
	VOID  reduce 63
	SHORT  reduce 63
	ULONG  reduce 63
	WHILE  reduce 63
	RETURN  reduce 63
	MAYOR  reduce 63
	MENOR  reduce 63
	MAYORIGUAL  reduce 63
	MENORIGUAL  reduce 63
	IGUAL  reduce 63
	DISTINTO  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	'}'  reduce 63
	','  reduce 63
	';'  reduce 63
	'$'  reduce 63
	')'  reduce 63


state 42
	termino : factor .  (66)

	.  reduce 66


state 43
	programa : '{' '}' .  (2)

	.  reduce 2


state 44
	programa : '{' cuerpoPrograma . '}'  (1)
	programa : '{' cuerpoPrograma .  (4)
	cuerpoPrograma : cuerpoPrograma . declaracionClase  (5)
	cuerpoPrograma : cuerpoPrograma . listaSentencias  (6)

	ID  shift 1
	CLASS  shift 2
	IF  shift 3
	PRINT  shift 4
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	WHILE  shift 8
	RETURN  shift 9
	'}'  shift 73
	$end  reduce 4

	declaracionClase  goto 46
	listaSentencias  goto 47
	tipo  goto 15
	declaracionMetodo  goto 16
	listaEjecutables  goto 17
	sentenciaEjecutable  goto 18
	asignacion  goto 19
	sentenciaIf  goto 20
	sentenciaWhile  goto 21
	print  goto 22
	return  goto 23
	invocacionMetodo  goto 24
	listaDeclarativa  goto 25
	sentenciaDeclarativa  goto 26
	declaracion  goto 27


state 45
	programa : cuerpoPrograma '}' .  (3)

	.  reduce 3


state 46
	cuerpoPrograma : cuerpoPrograma declaracionClase .  (5)

	.  reduce 5


state 47
	cuerpoPrograma : cuerpoPrograma listaSentencias .  (6)

	.  reduce 6


state 48
	listaDeclaracion : ID . ';' listaDeclaracion  (58)
	listaDeclaracion : ID .  (59)

	';'  shift 74
	$end  reduce 59
	ID  reduce 59
	CLASS  reduce 59
	IF  reduce 59
	PRINT  reduce 59
	VOID  reduce 59
	SHORT  reduce 59
	ULONG  reduce 59
	WHILE  reduce 59
	RETURN  reduce 59
	'}'  reduce 59
	','  reduce 59
	'$'  reduce 59


state 49
	declaracion : tipo listaDeclaracion .  (57)

	.  reduce 57


state 50
	listaEjecutables : listaEjecutables ',' . sentenciaEjecutable  (25)

	ID  shift 75
	IF  shift 3
	PRINT  shift 4
	WHILE  shift 8
	RETURN  shift 9
	.  error

	sentenciaEjecutable  goto 76
	asignacion  goto 19
	sentenciaIf  goto 20
	sentenciaWhile  goto 21
	print  goto 22
	return  goto 23
	invocacionMetodo  goto 24


state 51
	listaEjecutables : sentenciaEjecutable ',' .  (26)

	.  reduce 26


state 52
	listaEjecutables : sentenciaEjecutable '$' .  (27)

	.  reduce 27


state 53
	listaDeclarativa : listaDeclarativa ',' . sentenciaDeclarativa  (34)
	listaSentencias : listaDeclarativa ',' . listaEjecutables  (39)

	ID  shift 1
	IF  shift 3
	PRINT  shift 4
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	WHILE  shift 8
	RETURN  shift 9
	.  error

	tipo  goto 15
	declaracionMetodo  goto 16
	listaEjecutables  goto 77
	sentenciaEjecutable  goto 18
	asignacion  goto 19
	sentenciaIf  goto 20
	sentenciaWhile  goto 21
	print  goto 22
	return  goto 23
	invocacionMetodo  goto 24
	sentenciaDeclarativa  goto 78
	declaracion  goto 27


state 54
	listaDeclarativa : sentenciaDeclarativa ',' .  (35)

	.  reduce 35


state 55
	listaDeclarativa : sentenciaDeclarativa '$' .  (36)

	.  reduce 36


state 56
	asignacion : ID ASIGN expresion .  (42)
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)

	'+'  shift 68
	'-'  shift 69
	$end  reduce 42
	ID  reduce 42
	CLASS  reduce 42
	IF  reduce 42
	PRINT  reduce 42
	VOID  reduce 42
	SHORT  reduce 42
	ULONG  reduce 42
	WHILE  reduce 42
	RETURN  reduce 42
	'}'  reduce 42
	','  reduce 42
	'$'  reduce 42


state 57
	tipo : ID .  (62)

	.  reduce 62


state 58
	invocacionMetodo : ID '(' ')' .  (56)

	.  reduce 56


state 59
	invocacionMetodo : ID '(' tipo . ID ')'  (55)

	ID  shift 79
	.  error


state 60
	declaracionClase : CLASS ID '{' . cuerpoClase '}' ','  (9)
	declaracionClase : CLASS ID '{' . cuerpoClase '}'  (10)

	ID  shift 57
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	.  error

	cuerpoClase  goto 80
	seccionClase  goto 81
	seccionAtributos  goto 82
	seccionMetodos  goto 83
	tipo  goto 84
	declaracionMetodo  goto 85


state 61
	declaracionClase : CLASS ID ',' .  (11)

	.  reduce 11


state 62
	sentenciaIf : IF '(' expresion . comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}' END_IF  (43)
	sentenciaIf : IF '(' expresion . comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}'  (44)
	sentenciaIf : IF '(' expresion . comparador expresion ')' '{' listaEjecutables '}' END_IF  (45)
	sentenciaIf : IF '(' expresion . comparador expresion ')' '{' listaEjecutables '}'  (46)
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)

	MAYOR  shift 86
	MENOR  shift 87
	MAYORIGUAL  shift 88
	MENORIGUAL  shift 89
	IGUAL  shift 90
	DISTINTO  shift 91
	'+'  shift 68
	'-'  shift 69
	.  error

	comparador  goto 92


state 63
	print : PRINT '%' CADENA . '%'  (49)

	'%'  shift 93
	.  error


state 64
	declaracionMetodo : VOID ID '(' . tipo ID ')' '{' cuerpoMetodo '}'  (52)
	declaracionMetodo : VOID ID '(' . ')' '{' cuerpoMetodo '}'  (53)

	ID  shift 57
	SHORT  shift 6
	ULONG  shift 7
	')'  shift 94
	.  error

	tipo  goto 95


state 65
	sentenciaWhile : WHILE '(' expresion . comparador expresion ')' '{' listaEjecutables '}'  (47)
	sentenciaWhile : WHILE '(' expresion . comparador ')' '{' listaEjecutables '}'  (48)
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)

	MAYOR  shift 86
	MENOR  shift 87
	MAYORIGUAL  shift 88
	MENORIGUAL  shift 89
	IGUAL  shift 90
	DISTINTO  shift 91
	'+'  shift 68
	'-'  shift 69
	.  error

	comparador  goto 96


state 66
	factor : ID MENOSMENOS .  (70)

	.  reduce 70


state 67
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)
	factor : '(' expresion . ')'  (73)

	'+'  shift 68
	'-'  shift 69
	')'  shift 97
	.  error


state 68
	expresion : expresion '+' . termino  (64)

	ID  shift 35
	SHORT  shift 36
	ULONG  shift 37
	'('  shift 39
	.  error

	termino  goto 98
	factor  goto 42


state 69
	expresion : expresion '-' . termino  (65)

	ID  shift 35
	SHORT  shift 36
	ULONG  shift 37
	'('  shift 39
	.  error

	termino  goto 99
	factor  goto 42


state 70
	return : RETURN expresion ';' .  (51)

	.  reduce 51


state 71
	termino : termino '*' . factor  (67)

	ID  shift 35
	SHORT  shift 36
	ULONG  shift 37
	'('  shift 39
	.  error

	factor  goto 100


state 72
	termino : termino '/' . factor  (68)

	ID  shift 35
	SHORT  shift 36
	ULONG  shift 37
	'('  shift 39
	.  error

	factor  goto 101


state 73
	programa : '{' cuerpoPrograma '}' .  (1)

	.  reduce 1


state 74
	listaDeclaracion : ID ';' . listaDeclaracion  (58)

	ID  shift 48
	.  error

	listaDeclaracion  goto 102


state 75
	asignacion : ID . ASIGN expresion  (42)
	invocacionMetodo : ID . '(' tipo ID ')'  (55)
	invocacionMetodo : ID . '(' ')'  (56)

	ASIGN  shift 28
	'('  shift 29
	.  error


state 76
	listaEjecutables : listaEjecutables ',' sentenciaEjecutable .  (25)

	.  reduce 25


state 77
	listaEjecutables : listaEjecutables . ',' sentenciaEjecutable  (25)
	listaSentencias : listaDeclarativa ',' listaEjecutables .  (39)

	','  shift 50
	$end  reduce 39
	ID  reduce 39
	CLASS  reduce 39
	IF  reduce 39
	PRINT  reduce 39
	VOID  reduce 39
	SHORT  reduce 39
	ULONG  reduce 39
	WHILE  reduce 39
	RETURN  reduce 39
	'}'  reduce 39


state 78
	listaDeclarativa : listaDeclarativa ',' sentenciaDeclarativa .  (34)

	.  reduce 34


state 79
	invocacionMetodo : ID '(' tipo ID . ')'  (55)

	')'  shift 103
	.  error


state 80
	declaracionClase : CLASS ID '{' cuerpoClase . '}' ','  (9)
	declaracionClase : CLASS ID '{' cuerpoClase . '}'  (10)
	cuerpoClase : cuerpoClase . seccionClase  (13)

	ID  shift 57
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	'}'  shift 104
	.  error

	seccionClase  goto 105
	seccionAtributos  goto 82
	seccionMetodos  goto 83
	tipo  goto 84
	declaracionMetodo  goto 85


state 81
	cuerpoClase : seccionClase .  (14)

	.  reduce 14


state 82
	seccionClase : seccionAtributos .  (15)

	.  reduce 15


state 83
	seccionClase : seccionMetodos .  (16)
	seccionMetodos : seccionMetodos . ',' declaracionMetodo  (23)

	','  shift 106
	ID  reduce 16
	VOID  reduce 16
	SHORT  reduce 16
	ULONG  reduce 16
	'}'  reduce 16


state 84
	seccionAtributos : tipo . ID ';' listaAtributos  (17)
	seccionAtributos : tipo . ID ','  (18)
	seccionAtributos : tipo . ID  (19)

	ID  shift 107
	.  error


state 85
	seccionMetodos : declaracionMetodo . ','  (24)

	','  shift 108
	.  error


state 86
	comparador : MAYOR .  (74)

	.  reduce 74


state 87
	comparador : MENOR .  (75)

	.  reduce 75


state 88
	comparador : MAYORIGUAL .  (76)

	.  reduce 76


state 89
	comparador : MENORIGUAL .  (77)

	.  reduce 77


state 90
	comparador : IGUAL .  (78)

	.  reduce 78


state 91
	comparador : DISTINTO .  (79)

	.  reduce 79


state 92
	sentenciaIf : IF '(' expresion comparador . expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}' END_IF  (43)
	sentenciaIf : IF '(' expresion comparador . expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}'  (44)
	sentenciaIf : IF '(' expresion comparador . expresion ')' '{' listaEjecutables '}' END_IF  (45)
	sentenciaIf : IF '(' expresion comparador . expresion ')' '{' listaEjecutables '}'  (46)

	ID  shift 35
	SHORT  shift 36
	ULONG  shift 37
	'('  shift 39
	.  error

	expresion  goto 109
	termino  goto 41
	factor  goto 42


state 93
	print : PRINT '%' CADENA '%' .  (49)

	.  reduce 49


state 94
	declaracionMetodo : VOID ID '(' ')' . '{' cuerpoMetodo '}'  (53)

	'{'  shift 110
	.  error


state 95
	declaracionMetodo : VOID ID '(' tipo . ID ')' '{' cuerpoMetodo '}'  (52)

	ID  shift 111
	.  error


state 96
	sentenciaWhile : WHILE '(' expresion comparador . expresion ')' '{' listaEjecutables '}'  (47)
	sentenciaWhile : WHILE '(' expresion comparador . ')' '{' listaEjecutables '}'  (48)

	ID  shift 35
	SHORT  shift 36
	ULONG  shift 37
	'('  shift 39
	')'  shift 112
	.  error

	expresion  goto 113
	termino  goto 41
	factor  goto 42


state 97
	factor : '(' expresion ')' .  (73)

	.  reduce 73


state 98
	expresion : expresion '+' termino .  (64)
	termino : termino . '*' factor  (67)
	termino : termino . '/' factor  (68)

	'*'  shift 71
	'/'  shift 72
	$end  reduce 64
	ID  reduce 64
	CLASS  reduce 64
	IF  reduce 64
	PRINT  reduce 64
	VOID  reduce 64
	SHORT  reduce 64
	ULONG  reduce 64
	WHILE  reduce 64
	RETURN  reduce 64
	MAYOR  reduce 64
	MENOR  reduce 64
	MAYORIGUAL  reduce 64
	MENORIGUAL  reduce 64
	IGUAL  reduce 64
	DISTINTO  reduce 64
	'+'  reduce 64
	'-'  reduce 64
	'}'  reduce 64
	','  reduce 64
	';'  reduce 64
	'$'  reduce 64
	')'  reduce 64


state 99
	expresion : expresion '-' termino .  (65)
	termino : termino . '*' factor  (67)
	termino : termino . '/' factor  (68)

	'*'  shift 71
	'/'  shift 72
	$end  reduce 65
	ID  reduce 65
	CLASS  reduce 65
	IF  reduce 65
	PRINT  reduce 65
	VOID  reduce 65
	SHORT  reduce 65
	ULONG  reduce 65
	WHILE  reduce 65
	RETURN  reduce 65
	MAYOR  reduce 65
	MENOR  reduce 65
	MAYORIGUAL  reduce 65
	MENORIGUAL  reduce 65
	IGUAL  reduce 65
	DISTINTO  reduce 65
	'+'  reduce 65
	'-'  reduce 65
	'}'  reduce 65
	','  reduce 65
	';'  reduce 65
	'$'  reduce 65
	')'  reduce 65


state 100
	termino : termino '*' factor .  (67)

	.  reduce 67


state 101
	termino : termino '/' factor .  (68)

	.  reduce 68


state 102
	listaDeclaracion : ID ';' listaDeclaracion .  (58)

	.  reduce 58


state 103
	invocacionMetodo : ID '(' tipo ID ')' .  (55)

	.  reduce 55


state 104
	declaracionClase : CLASS ID '{' cuerpoClase '}' . ','  (9)
	declaracionClase : CLASS ID '{' cuerpoClase '}' .  (10)

	','  shift 114
	$end  reduce 10
	ID  reduce 10
	CLASS  reduce 10
	IF  reduce 10
	PRINT  reduce 10
	VOID  reduce 10
	SHORT  reduce 10
	ULONG  reduce 10
	WHILE  reduce 10
	RETURN  reduce 10
	'}'  reduce 10


state 105
	cuerpoClase : cuerpoClase seccionClase .  (13)

	.  reduce 13


state 106
	seccionMetodos : seccionMetodos ',' . declaracionMetodo  (23)

	VOID  shift 5
	.  error

	declaracionMetodo  goto 115


state 107
	seccionAtributos : tipo ID . ';' listaAtributos  (17)
	seccionAtributos : tipo ID . ','  (18)
	seccionAtributos : tipo ID .  (19)

	','  shift 116
	';'  shift 117
	ID  reduce 19
	VOID  reduce 19
	SHORT  reduce 19
	ULONG  reduce 19
	'}'  reduce 19


state 108
	seccionMetodos : declaracionMetodo ',' .  (24)

	.  reduce 24


state 109
	sentenciaIf : IF '(' expresion comparador expresion . ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}' END_IF  (43)
	sentenciaIf : IF '(' expresion comparador expresion . ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}'  (44)
	sentenciaIf : IF '(' expresion comparador expresion . ')' '{' listaEjecutables '}' END_IF  (45)
	sentenciaIf : IF '(' expresion comparador expresion . ')' '{' listaEjecutables '}'  (46)
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)

	'+'  shift 68
	'-'  shift 69
	')'  shift 118
	.  error


state 110
	declaracionMetodo : VOID ID '(' ')' '{' . cuerpoMetodo '}'  (53)

	ID  shift 1
	IF  shift 3
	PRINT  shift 4
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	WHILE  shift 8
	RETURN  shift 9
	.  error

	listaSentencias  goto 119
	tipo  goto 15
	declaracionMetodo  goto 16
	listaEjecutables  goto 17
	sentenciaEjecutable  goto 18
	asignacion  goto 19
	sentenciaIf  goto 20
	sentenciaWhile  goto 21
	print  goto 22
	return  goto 23
	invocacionMetodo  goto 24
	listaDeclarativa  goto 25
	sentenciaDeclarativa  goto 26
	declaracion  goto 27
	cuerpoMetodo  goto 120


state 111
	declaracionMetodo : VOID ID '(' tipo ID . ')' '{' cuerpoMetodo '}'  (52)

	')'  shift 121
	.  error


state 112
	sentenciaWhile : WHILE '(' expresion comparador ')' . '{' listaEjecutables '}'  (48)

	'{'  shift 122
	.  error


state 113
	sentenciaWhile : WHILE '(' expresion comparador expresion . ')' '{' listaEjecutables '}'  (47)
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)

	'+'  shift 68
	'-'  shift 69
	')'  shift 123
	.  error


state 114
	declaracionClase : CLASS ID '{' cuerpoClase '}' ',' .  (9)

	.  reduce 9


state 115
	seccionMetodos : seccionMetodos ',' declaracionMetodo .  (23)

	.  reduce 23


state 116
	seccionAtributos : tipo ID ',' .  (18)

	.  reduce 18


state 117
	seccionAtributos : tipo ID ';' . listaAtributos  (17)

	ID  shift 124
	.  error

	listaAtributos  goto 125


state 118
	sentenciaIf : IF '(' expresion comparador expresion ')' . '{' listaEjecutables '}' ELSE '{' listaEjecutables '}' END_IF  (43)
	sentenciaIf : IF '(' expresion comparador expresion ')' . '{' listaEjecutables '}' ELSE '{' listaEjecutables '}'  (44)
	sentenciaIf : IF '(' expresion comparador expresion ')' . '{' listaEjecutables '}' END_IF  (45)
	sentenciaIf : IF '(' expresion comparador expresion ')' . '{' listaEjecutables '}'  (46)

	'{'  shift 126
	.  error


state 119
	cuerpoMetodo : listaSentencias .  (54)

	.  reduce 54

